Added funtionality for the Tank AI Controllers to move themselves using dot products and cross products

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,4 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3510C6F34B27168EF6A129B54DFBC7AC
-CopyrightNotice=ZahFox Tales
+CopyrightNotice=Copyright ZahFox Tales
 
